Fixes to nav and alignment

--- a/components/HomePage/Pannel1/EventLine/EventLine.module.scss
+++ b/components/HomePage/Pannel1/EventLine/EventLine.module.scss
@@ -30,6 +30,8 @@
       grid-row: skills-start / skills-end;
       padding-bottom: 12rem;
       color: white;
+      justify-self: start;
+      padding-left: 4rem;
     }
   }
 
