--- a/components/Navbar/NavBar.module.scss
+++ b/components/Navbar/NavBar.module.scss
@@ -38,7 +38,7 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    top: 4rem;
+    top: 7rem;
     left: 0;
     right: 0;
     background-color: $color-dark-grey-1;
@@ -56,12 +56,12 @@
 }
 
 .link {
-  padding: 1.5rem 1.5rem;
+  padding: 15px 15px;
   text-decoration: none;
   color: white;
-  font-size: 1.6rem;
+  font-size: 16px;
   transition: all 0.2s ease, box-shadow 0.2s ease;
-  width: 13rem;
+  width: 130px;
   text-align: center;
   display: block;
 
